add some notice

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <body>
         <h1>亲密关系类型量表</h1>
         <h2>Experience in Close Relationships Inventory, ECR</h2>
-        <h3>注意：请在安静环境下完成，这里不仅仅是指现在的恋爱经历，它针对的是你所有的恋爱经历中常常体验到的感觉。如果你尚未恋爱，请根据与你最亲近的朋友的交往情况作答。</h3>
+        <h3><b style="color: crimson;">注意：</b>请在安静环境下完成，这里不仅仅是指现在的恋爱经历，它针对的是你所有的恋爱经历中常常体验到的感觉。如果你尚未恋爱，请根据与你最亲近的朋友的交往情况作答。</h3>
         <h3>分值代表你对问题的同意程度，“1”是完全不同意，“4”是不确定，“7”是完全同意</h3>
         <label for="question1">1. 总的来说，我不喜欢让恋人知道自己内心深处的感觉</label>
         <input type="range" min="1" max="7" class="slider" id="question1">
@@ -442,6 +442,7 @@
         </div>
         <br>
         <button id="submit">提交</button>
+        <p><b style="color: crimson;">注意：</b>量表的结果会随着你的恋爱经历变化而变化，一段时间后再测试结果不相同是很正常的事情，量表的目的是更好地了解你目前的依恋状态，而不是定义</p>
     </body>
     <script src="main.js"></script>
 </html>
