fixed sentence mistakes

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
         <title>Experience in Close Relationships Inventory</title>
         <meta charset="UTF-8">
     <body>
-        <h1>亲密关系类型量表</h1>
+        <h1>亲密关系经历量表</h1>
         <h2>Experience in Close Relationships Inventory, ECR</h2>
         <h3><b style="color: crimson;">注意：</b>请在安静环境下完成，这里不仅仅是指现在的恋爱经历，它针对的是你所有的恋爱经历中常常体验到的感觉。如果你尚未恋爱，请根据与你最亲近的朋友的交往情况作答。</h3>
         <h3>分值代表你对问题的同意程度，“1”是完全不同意，“4”是不确定，“7”是完全同意</h3>
